--- a/cvitae_eng.tex
+++ b/cvitae_eng.tex
@@ -130,6 +130,9 @@
 \section{Selected Publications}
 % \cvline{}{ \newline \textit{}}\cvline{}{ G. Pozzetti, B. Peters
 \small
+\cvline{2019} {B.Peters, \textbf{G.Pozzetti}
+\textit{Numerical Analysis of Powder Deposition in Direct Material Injection} Granular Matter.}
+
 \cvline{2019}{ E.Rabadan Santana, \textbf{G. Pozzetti}, B. Peters
 \textit{Application of a dual-grid multiscale CFD-DEM coupling method to model the raceway dynamics in packed bed reactors}  Chemical Engineering Sciences.}
 
@@ -184,8 +187,7 @@
 \subsection{\textbf{Currently under consideration}}
 
 
-\cvline{2019} {B.Peters, \textbf{G.Pozzetti}
-\textit{An Innovative High Resolution Approach to Analyse Deposition of Powder for Directed Energy Deposition Methods} The International journal of Advanced Manufacturing Technology.}
+
 \cvline{2019} {M.Baniasadi, M.Baniasadi, \textbf{G.Pozzetti}, B.Peters
 \textit{A numerical study on the softening process of iron ore particles in the cohesive zone of an experimental blast furnace using a coupled CFD-DEM method} (https://arxiv.org/abs/1806.08114) Chemical Engineering Sciences}
 
