--- a/cvitae_GP.tex
+++ b/cvitae_GP.tex
@@ -60,32 +60,40 @@
 % \end{minipage}
 %\vspace{0.1cm}
 \section{Positions}
-\cventry{ 2018-now}{R\&D Project Manager}{CERATIZIT, Luxembourg}{Responsible for CFD in applied and fundamental research projects across CERATIZIT Group, responsible of HPC solutions for CERATIZIT, leader of fundamental research projects on machine learning and image processing}{}{}
-\cventry{2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{High resolution neutron tomography of Tungsten Carbide}{}
+\cventry{ 2018-now}{Project Manager}{CERATIZIT Luxembourg}{Responsible for CFD simulations for CERATIZIT Group, responsible for HPC solutions for CERATIZIT Luxembourg, Leader of fundamental research projects on machine learning and image processing}{}{}
+% \cventry{2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{High resolution neutron tomography of Tungsten Carbide}{}
 %\cventry{8/2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{Low resulution neutron tomography of Tungsten Carbide}{}
+\cventry{ 2017}{Application Engineer}{Wikki London (Parallelization of an OpenFOAM library)}{}{}{}{}
 
-% \cventry{ 2017}{Secondment}{Wikki London (parallelization of an OpenFOAM library)}{}{}{}{}
+\cventry{ 2016}{Application Engineer}{Inutech GmbH Nuremberg (Parallelization of a multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
 
+\cventry{2015-2018}{Software Developer}{XDEM GROUP (coupling interface between open-source and licensed simulation software)}{\textit{http://luxdem.uni.lu}}{}{}{}
 
-\cventry{ 2016}{Marie Curie Fellow}{Inutech GmbH Nuremberg (Parallelization of a Multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
-
-%\cventry{2015-2018}{XDEM-platform Developer}{\textit{http://luxdem.uni.lu}}{}{}{}
 %\cventry{2016-now}{Scientific collaborator: Reducing the Impact of Floods by Advanced Simulation Technology}{In collaboration with FNR, LIST}{}{}{}
 
 %\cventry{2015-2018}{Project investigator (PhD)}{Numerical Analysis of a High-speed Water Jet in a Converging Nozzle}{\textit{In collaboration with CERATIZIT group}}{}{}
 
-\cventry{2015-2018}{Teaching Assistant}{Continuum Mechanics}{\textit{University of Luxembourg}}{}{}
+% \cventry{2015-2018}{Teaching Assistant}{Continuum Mechanics}{\textit{University of Luxembourg}}{}{}
 
 \section{Education}
 \cventry{2015-2018}{PhD in Computational Engineering}{University of Luxembourg}{}{}{}
 \cventry{2012-2014}{Master in Nuclear and Energetical engineering}{University of Bologna}{}{}{}%{(110 cum Laude, exams average 30/30)}
 \cventry{2009-2012}{Bachelor degree in Energetical engineering}{University of Bologna}{}{}{}  
 
+\section{Post-Graduate Training}
+\cventry{2019}{SCRUM Agile Project Panagement Framework}{}{}{}{}
+\cventry{2019}{Fundamentals of Deep Learning}{NVIDIA Deep Learning Institute}{}{}{}{}
+\cventry{2017}{IP and R\&D}{University of Luxembourg}{(Doctoral Education)}{}{}
+\cventry{9 -13 May 2016}{Large Eddy Simulations: Theory and Applications}{Von Karman Institute \textit{http://vki.com}}{}{}{}
+\cventry{2015}{High Performance Computing School}{University of Luxembourg}{(Doctoral Education)}{}{}
+\cventry{2016}{Conflict Management}{University of Luxembourg}{(Doctoral Education)}{}{}
+\cventry{2016}{Scientific Presentation Skills}{University of Luxembourg}{(Doctoral Education)}{}{}
+
 \section{Selected Projects}
 \cventry{2020-Current}{Industrial Project Manager}{HybridSimCVD FNR Luxembourg}{}{}{}
 \cventry{2018-Current}{Industrial Project Manager}{VP4HPC FNR Luxembourg}{}{}{}
-\cventry{2017-2018}{Scientific Collaborator}{ERDF-2016-01-002-06 Digital Twin project}{}{}{}
-\cventry{2015-2017}{Scientific Collaborator}{European project: F1R ING PEU 12AMST}{}{}{}{}
+\cventry{2017-2018}{Consultant}{ERDF-2016-01-002-06 Digital Twin project}{}{}{}
+\cventry{2015-2017}{Consultant}{European project: F1R ING PEU 12AMST}{}{}{}{}
 
 \section{Recognitions}
 \cvline{2018}{Outstanding Contribution in Reviewing \textit{Powder Technology.}}
@@ -109,13 +117,7 @@
 % \cventry{2004-2009}{Classical High school}{P.Sarpi, via Rosati 1}{ Bergamo}{}{}
 % \vspace{1cm}
 
-% \section{Post-Graduate Training}
-% \cventry{2017}{IP and R\&D}{University of Luxembourg}{(Doctoral Education)}{}{}
-% \cventry{9 -13 May 2016}{Large Eddy Simulations: Theory and Applications}{Von Karman Institute \textit{http://vki.com}}{}{}{}
-% \cventry{2015}{High Performance Computing School}{University of Luxembourg}{(Doctoral Education)}{}{}
-% \subsection{\textit{Soft Skills}}
-% \cventry{2016}{Conflict Management}{University of Luxembourg}{(Doctoral Education)}{}{}
-% \cventry{2016}{Scientific Presentation Skills}{University of Luxembourg}{(Doctoral Education)}{}{}
+
 
 
 % \section{Reviewing Activity}
@@ -127,12 +129,12 @@
 \cvlanguage{English}{C1/C2}{}
 \end{minipage}
 \begin{minipage}[b]{.3\linewidth}
+\cvlanguage{French}{B2}{}
 \cvlanguage{Spanish}{B1}{}
-\cvlanguage{French}{B1}{}
 \end{minipage}
-% \begin{minipage}[b]{.3\linewidth}
-% \cvlanguage{German}{A2}{}
-% \end{minipage}
+\begin{minipage}[b]{.3\linewidth}
+\cvlanguage{German}{A2}{}
+\end{minipage}
 % \section{Informatics}
 % \cvline{Basic}{\small  Ruby, nanoc, Mathematica, XML, COMSOL Multiphysics\textregistered }
 % \cvline{Intermediate}{\small Matlab, GNU Octave, MPI, Dakota}
