--- a/cvitae_GP.tex
+++ b/cvitae_GP.tex
@@ -77,37 +77,38 @@
 
 \section{Education}
 \cventry{2015-2018}{PhD in Computational Engineering}{University of Luxembourg}{}{}{}
-\cventry{2012-2014}{Master in Nuclear and Energetical engineering}{University of Bologna}{}{}{}%{(110 cum Laude, exams average 30/30)}
-\cventry{2009-2012}{Bachelor degree in Energetical engineering}{University of Bologna}{}{}{}  
+\cventry{2012-2014}{Master in Nuclear and Energetical Engineering}{University of Bologna}{}{}{}%{(110 cum Laude, exams average 30/30)}
+\cventry{2009-2012}{Bachelor degree in Energetical Engineering}{University of Bologna}{}{}{}  
 
 \section{Post-Graduate Training}
-\cventry{2019}{SCRUM Agile Project Panagement Framework}{}{}{}{}
+\cventry{2020}{FTM Management Training}{CERATIZIT}{}{}{}
+\cventry{2019}{SCRUM Agile Project Management Framework}{Emendare}{}{}{}
 \cventry{2019}{Fundamentals of Deep Learning}{NVIDIA Deep Learning Institute}{}{}{}{}
 \cventry{2017}{IP and R\&D}{University of Luxembourg}{(Doctoral Education)}{}{}
-\cventry{9 -13 May 2016}{Large Eddy Simulations: Theory and Applications}{Von Karman Institute \textit{http://vki.com}}{}{}{}
+% \cventry{2016}{Large Eddy Simulations: Theory and Applications}{Von Karman Institute \textit{http://vki.com}}{}{}{}
 \cventry{2015}{High Performance Computing School}{University of Luxembourg}{(Doctoral Education)}{}{}
 \cventry{2016}{Conflict Management}{University of Luxembourg}{(Doctoral Education)}{}{}
 \cventry{2016}{Scientific Presentation Skills}{University of Luxembourg}{(Doctoral Education)}{}{}
 
-\section{Selected Projects}
-\cventry{2020-Current}{Industrial Project Manager}{HybridSimCVD FNR Luxembourg}{}{}{}
-\cventry{2018-Current}{Industrial Project Manager}{VP4HPC FNR Luxembourg}{}{}{}
-\cventry{2017-2018}{Consultant}{ERDF-2016-01-002-06 Digital Twin project}{}{}{}
-\cventry{2015-2017}{Consultant}{European project: F1R ING PEU 12AMST}{}{}{}{}
+% \section{Selected Projects}
+% \cventry{2020-Current}{Industrial Project Manager}{HybridSimCVD FNR Luxembourg}{}{}{}
+% \cventry{2018-Current}{Industrial Project Manager}{VP4HPC FNR Luxembourg}{}{}{}
+% \cventry{2017-2018}{Consultant}{ERDF-2016-01-002-06 Digital Twin project}{}{}{}
+% \cventry{2015-2017}{Consultant}{European project: F1R ING PEU 12AMST}{}{}{}{}
 
 \section{Recognitions}
 \cvline{2018}{Outstanding Contribution in Reviewing \textit{Powder Technology.}}
  \cvline{2018}{Excellence in Ph.D. research \textit{University of Luxembourg.}}
 \cvline{2013-2014}{Winner  of the Excellence and  Merit award 2013 \textit{University of Bologna.}}
 
-\section{Organization of Events}
-\cventry{2018}{Organizer}{Symposium at WCCM2018}{\textit{http://www.wccm2018.org}}{}{}
-
-\cventry{2017}{Principal Organizer}{ Symposium  at ICNAAM2017}{\textit{https://icnaam.org}}{}{}{}
-
-
-
-\cventry{2016}{Organizer}{ Symposium  at ICNAAM2016}{\textit{https://icnaam.org}}{}{}{}
+% \section{Organization of Events}
+% \cventry{2018}{Organizer}{Symposium at WCCM2018}{\textit{http://www.wccm2018.org}}{}{}
+% 
+% \cventry{2017}{Principal Organizer}{ Symposium  at ICNAAM2017}{\textit{https://icnaam.org}}{}{}{}
+% 
+% 
+% 
+% \cventry{2016}{Organizer}{ Symposium  at ICNAAM2016}{\textit{https://icnaam.org}}{}{}{}
 
 % \cventry{2014}{Intern}{Integration of the \textit{Libmesh} FEM Code into the \textit{Salome} platform}{DIN}{Bologna}{}{}
 % 
