again changing it to algorithm development engineer

--- a/cvitae_GP.tex
+++ b/cvitae_GP.tex
@@ -63,9 +63,9 @@
 \cventry{ 2018-now}{Project Manager}{CERATIZIT Luxembourg}{Responsible for CFD simulations for CERATIZIT Group, responsible for HPC solutions for CERATIZIT Luxembourg, Leader of fundamental research projects on machine learning and image processing}{}{}
 % \cventry{2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{High resolution neutron tomography of Tungsten Carbide}{}
 %\cventry{8/2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{Low resulution neutron tomography of Tungsten Carbide}{}
-\cventry{ 2017}{Application Engineer}{Wikki London (Parallelization of an OpenFOAM library)}{}{}{}{}
+\cventry{ 2017}{Algorithm Development Engineer}{Wikki London (Parallelization of an OpenFOAM library)}{}{}{}{}
 
-\cventry{ 2016}{Application Engineer}{Inutech GmbH Nuremberg (Parallelization of a multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
+\cventry{ 2016}{Algorithm Development Engineer}{Inutech GmbH Nuremberg (Parallelization of a multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
 
 \cventry{2015-2018}{Software Developer}{XDEM GROUP (coupling interface between open-source and licensed simulation software)}{\textit{http://luxdem.uni.lu}}{}{}{}
 
