adding a publication in bridge and minor

--- a/cvitae_GP.tex
+++ b/cvitae_GP.tex
@@ -7,7 +7,7 @@
 \usepackage[utf8]{inputenc}                   % replace by the encoding you are using
 
 % adjust the page margins
-\usepackage[scale=0.85]{geometry}
+\usepackage[scale=0.87]{geometry}
 \usepackage{qrcode}
 %\usepackage{hyperref}
 %\setlength{\hintscolumnwidth}{3cm}						% if you want to change the width of the column with the dates
@@ -111,7 +111,7 @@
 \cventry{2009-2012}{Bachelor in Energetical Engineering}{University of Bologna}{}{}{}
 
 \section{Post-Graduate Training}
-\cventry{2020}{FTM Management Training}{CERATIZIT}{}{}{}
+%\cventry{2020}{FTM Management Training}{CERATIZIT}{}{}{}
 \cventry{2019}{SCRUM Agile Project Management Framework}{Emendare}{}{}{}
 \cventry{2019}{Fundamentals of Deep Learning}{NVIDIA Deep Learning Institute}{}{}{}{}
 \cventry{2017}{IP and R\&D}{University of Luxembourg}{Doctoral Education}{}{}
