--- a/cvitae_Bridge.tex
+++ b/cvitae_Bridge.tex
@@ -7,7 +7,7 @@
 \usepackage[utf8]{inputenc}                   % replace by the encoding you are using
 
 % adjust the page margins
-\usepackage[scale=0.8]{geometry}
+\usepackage[scale=0.85]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}						% if you want to change the width of the column with the dates
 %\AtBeginDocument{\setlength{\maketitlenamewidth}{1cm}}  % only for the classic theme, if you want to change the width of your name placeholder (to leave more space for your address details
 %\AtBeginDocument{\recomputelengths}                     % required when changes are made to page layout lengths
@@ -85,7 +85,7 @@
 
 \section{Recognitions}
 \cvline{2018}{Outstanding Contribution in Reviewing \textit{Powder Technology.}}
-\cvline{2018}{Excellence in Ph.D. research \textit{University of Luxembourg.}}
+ \cvline{2018}{Excellence in Ph.D. research \textit{University of Luxembourg.}}
 \cvline{2013-2014}{Winner  of the Excellence and  Merit award 2013 \textit{University of Bologna.}}
 
 \section{Organization of Events}
@@ -149,6 +149,9 @@
 
 \cvline{2019}{ \textbf{G. Pozzetti}, H. Jasak, X. Besseron, A. Rousset, B. Peters
 \textit{A parallel dual-grid multiscale approach to CFD-DEM couplings}  Journal of Computational Physics.}
+
+\cvline{2019}{ E.Rabadan Santana, \textbf{G. Pozzetti}, B. Peters
+\textit{Application of a dual-grid multiscale CFD-DEM coupling method to model the raceway dynamics in packed bed reactors}  Chemical Engineering Sciences.}
 
 \cvline{2018}{ \textbf{G. Pozzetti}, X. Besseron, A. Rousset, B. Peters
 \textit{A co-located partitions strategy for parallel CFD-DEM Couplings}   Advanced Powder Technology.}
