removing double entry and adding new position

--- a/cvitae_GP.tex
+++ b/cvitae_GP.tex
@@ -88,12 +88,16 @@
 % \end{minipage}
 %\vspace{0.1cm}
 \section{Positions}
-\cventry{ 2018-now}{Project Manager}{CERATIZIT Luxembourg}{}{}{\mybitem{Responsible for CFD simulations services across CERATIZIT Group} \mybitem{Responsible for HPC soulutions for CERATIZIT Luxembourg} \mybitem{Leader of CERATIZIT  functional team for Machine Learning and Image Processing} }
+\cventry{ 2021-Present}{Manager}{CERATIZIT SA}{}{}{\mybitem{Responsible for  Artificial Intelligence and Data Science strategies for CERATIZIT worldwide} \mybitem{Responsible for building  and leading CERATIZIT team for Artificial Intelligence and Data Science} \mybitem{Directly reporting to CFO on AI integration on CERATIZIT's business model.} }
+
+\cventry{ 2018-2020}{Project Manager}{CERATIZIT Luxembourg}{}{}{{Responsible for CFD simulations services across CERATIZIT Group},  
+ {Responsible for HPC soulutions for CERATIZIT Luxembourg}, {Leader of CERATIZIT  functional team for Machine Learning and Image Processing} }
+
 % \cventry{2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{High resolution neutron tomography of Tungsten Carbide}{}
 %\cventry{8/2018}{Visiting Scientist}{SINQ 2018 }{PSI, Switzerland}{Low resulution neutron tomography of Tungsten Carbide}{}
 \cventry{ 2017}{Algorithm Development Engineer}{Wikki London (Parallelization of an OpenFOAM library)}{}{}{}{}
 
-\cventry{ 2016}{Algorithm Development Engineer}{Inutech GmbH Nuremberg (Parallelization of a multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
+% \cventry{ 2016}{Algorithm Development Engineer}{Inutech GmbH Nuremberg (Parallelization of a multiphysics solver)}{\textit{https://inutech.de}}{}{}{}
 
 \cventry{ 2016}{Algorithm Engineer}{Inutech GmbH Nuremberg}{}{Parallelization of a multiphysics solver}{}{}{}
 
