adding missing points

--- a/cvitae_GP.tex
+++ b/cvitae_GP.tex
@@ -88,7 +88,7 @@
 % \end{minipage}
 %\vspace{0.1cm}
 \section{Positions}
-\cventry{ 2021-Present}{Manager}{CERATIZIT S.A}{}{}{\mybitem{Responsible for  Artificial Intelligence and Data Science strategies for CERATIZIT worldwide} \mybitem{Responsible for building  and leading CERATIZIT team for Artificial Intelligence and Data Science} \mybitem{Directly reporting to CFO on AI integration on CERATIZIT business model.} }
+\cventry{ 2021-Present}{Manager}{CERATIZIT S.A}{}{}{\mybitem{Responsible for  Artificial Intelligence and Data Science strategies for CERATIZIT worldwide.} \mybitem{Responsible for building  and leading CERATIZIT team for Artificial Intelligence and Data Science.} \mybitem{Directly reporting to CFO on AI integration on CERATIZIT business model.} }
 
 \cventry{ 2018-2020}{Project Manager}{CERATIZIT Luxembourg}{}{}{{Responsible for CFD simulations services across CERATIZIT Group},  
  {Responsible for HPC soulutions for CERATIZIT Luxembourg}, {Leader of CERATIZIT  functional team for Machine Learning and Image Processing} }
